[Refactor] module 도메인 3개로 분리
tetris-core (POJO tetris algorithm)
tetris-client (JavaFX)
tetris-backend (SpringBoot)